--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -1,7 +1,49 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane alignment="center" hgap="10" nodeOrientation="LEFT_TO_RIGHT" prefHeight="239.0" prefWidth="186.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller">
+    <stylesheets>
+        <URL value="@kalkulator.css" />
+    </stylesheets>
+
+    <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+   </rowConstraints>
+   <columnConstraints>
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+   </columnConstraints>
+   <children>
+      <Button fx:id="procenatBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="\%" GridPane.rowIndex="1" />
+      <TextField fx:id="unosBrojeva" prefHeight="30.0" prefWidth="186.0" GridPane.columnSpan="4" />
+      <Button fx:id="podjeljenoBt" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button fx:id="putaBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Button fx:id="minusBtn" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+      <Button fx:id="btn7" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="7" GridPane.rowIndex="2" />
+      <Button fx:id="btn8" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Button fx:id="btn9" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <Button fx:id="plusBtn" mnemonicParsing="false" prefHeight="70.0" prefWidth="40.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2" />
+      <Button fx:id="btn4" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="4" GridPane.rowIndex="3" />
+      <Button fx:id="btn5" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Button fx:id="btn6" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Button fx:id="btn1" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="1" GridPane.rowIndex="4" />
+      <Button fx:id="btn2" mnemonicParsing="false" prefHeight="32.0" prefWidth="40.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Button fx:id="btn3" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+      <Button fx:id="btn0" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="0" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <Button fx:id="tackaBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="." GridPane.columnIndex="2" GridPane.rowIndex="5" />
+      <Button fx:id="jednakoBtn" mnemonicParsing="false" prefHeight="70.0" prefWidth="37.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
+   </children>
 </GridPane>
