--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -27,7 +27,7 @@
       <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
    </columnConstraints>
    <children>
-      <Button fx:id="procenatBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="\%" GridPane.rowIndex="1" />
+      <Button fx:id="procenatBtn" mnemonicParsing="false" onAction="#Controller" prefHeight="30.0" prefWidth="40.0" text="\%" GridPane.rowIndex="1" />
       <TextField fx:id="unosBrojeva" prefHeight="30.0" prefWidth="186.0" GridPane.columnSpan="4" />
       <Button fx:id="podjeljenoBt" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Button fx:id="putaBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1" />
