--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -2,7 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -25,10 +25,10 @@
       <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
    </columnConstraints>
    <children>
       <Button fx:id="procenatBtn" mnemonicParsing="false" onAction="#Controller" prefHeight="30.0" prefWidth="40.0" text="\%" GridPane.rowIndex="1" />
-      <TextField fx:id="unosBrojeva" prefHeight="30.0" prefWidth="186.0" GridPane.columnSpan="4" />
       <Button fx:id="podjeljenoBt" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Button fx:id="putaBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       <Button fx:id="minusBtn" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
@@ -45,5 +45,6 @@
       <Button fx:id="btn0" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="0" GridPane.columnSpan="2" GridPane.rowIndex="5" />
       <Button fx:id="tackaBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="." GridPane.columnIndex="2" GridPane.rowIndex="5" />
       <Button fx:id="jednakoBtn" mnemonicParsing="false" prefHeight="70.0" prefWidth="37.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
+      <Label fx:id="unosBrojeva" prefHeight="30.0" prefWidth="186.0" GridPane.columnSpan="5" />
    </children>
 </GridPane>
