--- a/src/ba/unsa/etf/rpr/tutorijal05/kalkulator.css
+++ b/src/ba/unsa/etf/rpr/tutorijal05/kalkulator.css
@@ -10,7 +10,7 @@
     -fx-padding: 0;
 }
 
-#unosBrojeva {
+#display {
      -fx-background-color: lightgreen;
      -fx-font-family: Arial;
      -fx-font-size:20;
