--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -44,7 +44,7 @@
       <Button fx:id="btn3" mnemonicParsing="false" onAction="#threeClick" prefHeight="30.0" prefWidth="40.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4" />
        <Button fx:id="btn0" maxHeight="Infinity" maxWidth="Infinity" mnemonicParsing="false" onAction="#zeroClick" prefHeight="65.0" prefWidth="132.0" text="0" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS" />
 
-      <Button fx:id="tackaBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="." GridPane.columnIndex="2" GridPane.rowIndex="5" />
+      <Button fx:id="dotBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="." GridPane.columnIndex="2" GridPane.rowIndex="5" />
       <Button fx:id="jednakoBtn" mnemonicParsing="false" prefHeight="70.0" prefWidth="37.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
        <Label  fx:id="display" maxHeight="Infinity" maxWidth="Infinity" text="${controller.tekst}" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
    </children>
