--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -33,9 +33,9 @@
       <Button fx:id="putaBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       <Button fx:id="minusBtn" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
       <Button fx:id="btn7" mnemonicParsing="false" onAction="#sevenClick" prefHeight="30.0" prefWidth="40.0" text="7" GridPane.rowIndex="2" />
-      <Button fx:id="btn8" mnemonicParsing="false" onAction="#eightClick" text="8" prefHeight="30.0" prefWidth="40.0"  GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Button fx:id="btn8" mnemonicParsing="false" onAction="#eightClick" prefHeight="30.0" prefWidth="40.0" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Button fx:id="btn9" mnemonicParsing="false" onAction="#nineClick" prefHeight="30.0" prefWidth="40.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <Button fx:id="plusBtn" mnemonicParsing="false" prefHeight="70.0" prefWidth="40.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2" />
+      <Button fx:id="plusBtn" mnemonicParsing="false" onAction="#PlusBtn" prefHeight="70.0" prefWidth="40.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2" />
       <Button fx:id="btn4" mnemonicParsing="false" onAction="#fourClick" prefHeight="30.0" prefWidth="40.0" text="4" GridPane.rowIndex="3" />
       <Button fx:id="btn5" mnemonicParsing="false" onAction="#fiveClick" prefHeight="30.0" prefWidth="40.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <Button fx:id="btn6" mnemonicParsing="false" onAction="#sixClick" prefHeight="30.0" prefWidth="40.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3" />
@@ -44,8 +44,8 @@
       <Button fx:id="btn3" mnemonicParsing="false" onAction="#threeClick" prefHeight="30.0" prefWidth="40.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4" />
        <Button fx:id="btn0" maxHeight="Infinity" maxWidth="Infinity" mnemonicParsing="false" onAction="#zeroClick" prefHeight="65.0" prefWidth="132.0" text="0" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS" />
 
-      <Button fx:id="dotBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="." GridPane.columnIndex="2" GridPane.rowIndex="5" />
-      <Button fx:id="jednakoBtn" mnemonicParsing="false" prefHeight="70.0" prefWidth="37.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
-       <Label  fx:id="display" maxHeight="Infinity" maxWidth="Infinity" text="${controller.tekst}" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
+      <Button fx:id="dotBtn" mnemonicParsing="false" prefHeight="30.0" prefWidth="40.0" text="." onAction="#dotBtn" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+      <Button fx:id="equalsBtn" mnemonicParsing="false" prefHeight="70.0" prefWidth="37.0" onAction="#EqualsBtn" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
+       <Label fx:id="display" maxHeight="Infinity" maxWidth="Infinity" text="${controller.tekst}" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
    </children>
 </GridPane>
